--- a/Services.html
+++ b/Services.html
@@ -19,7 +19,7 @@
             </ul>
         </div>
 		<div class="title">
-		    <h1>Services</h1>
+		    <h1>Executors</h1>
 		</div>
 		
 		<div class="button">
