--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </ul>
         </div>
 		<div class="title">
-		    <h1>Minecraft Games</h1>
+		    <h1>Executors and scrips and more</h1>
 		</div>
 		
 		<div class="button">
