--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		</div>
 		
 		<div class="button">
-		    <a href="#" class="btn">watch video</a>
+		    <a href="https://www.youtube.com/channel/UCYN95gzSz-HmFqlkG04yRng?view_as=subscriber" class="btn">Youtube channel</a>
 			<a href="#" class="btn">lean more</a>
 		</div>
     </header>
