--- a/Services.html
+++ b/Services.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CoolGames.com</title>
+    <title>Executors</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
