--- a/Gallery.html
+++ b/Gallery.html
@@ -21,6 +21,9 @@
 		<div class="title">
 		    <h1>Gallery</h1>
 		</div>
+	    	<div class="img">
+			<img src="Evildead.png">
+	    	</div>
 		
 		<div class="button">
 		    <a href="#" class="btn">watch video</a>
