--- a/Gallery.html
+++ b/Gallery.html
@@ -20,10 +20,8 @@
         </div>
 		<div class="title">
 		    <h1>Gallery</h1>
-		</div>
-	    	<div class="img">
-			<img src="Evildead.png">
 	    	</div>
+			<img src="Evildead.PNG" />
 		
 		<div class="button">
 		    <a href="#" class="btn">watch video</a>
