--- a/Gallery.html
+++ b/Gallery.html
@@ -21,7 +21,7 @@
 		<div class="title">
 		    <h1>Gallery</h1>
 	    	</div>
-			<img src="Evildead.PNG" />
+			<img src="Evildead.PNG">
 		
 		<div class="button">
 		    <a href="#" class="btn">watch video</a>
